# Algorithmic-Trading-of-Stocks-With-RL

./: README.md  config.yaml  pyproject.toml
raw-data/stocks/: AAPL.csv
src/: environments.py  preprocess-data.py  test.py  train.py
src/data/: test.csv  train.csv  val.csv
